beagle-dsl-compiler: working